--- a/src/main/resources/data/myrefall/powers/dragon_increases_hearts.json
+++ b/src/main/resources/data/myrefall/powers/dragon_increases_hearts.json
@@ -8,23 +8,22 @@
       "amplifier": 1
     }
   },
-  "cooldown": 0,
-  "hud_render": {
-    "should_render": true,
-    "sprite_location": "origins:textures/gui/community/spiderkolo/resource_bar_01.png",
-    "bar_index": 5
-  },
-  "damage_condition": {
-    "type": "origins:attacker",
-    "entity_condition": {
-      "type": "origins:equipped_item",
-      "equipment_slot": "mainhand",
-      "item_condition": {
-        "type": "origins:ingredient",
-        "ingredient": {
-          "item": "minecraft:iron_sword"
-        }
+  "target_condition": {
+    "type": "origins:or",
+    "conditions": [
+      {
+        "type": "origins:entity_type",
+        "entity_type": "iceandfire:fire_dragon"
+      },
+      {
+        "type": "origins:entity_type",
+        "entity_type": "iceandfire:ice_dragon"
+      },
+      {
+        "type": "origins:entity_type",
+        "entity_type": "iceandfire:lightning_dragon"
       }
-    }
-  }
+    ]
+  },
+  "cooldown": 0
 }
